--- a/index.html
+++ b/index.html
@@ -6,6 +6,17 @@
 <body>
 
 <h1>Joshua Velez</h1>
+<h2>Lab 2 - Homepage</h2>
+
+<p>Hello, my name is Josh. I am a Information Systems student and currently a Junior. Some coding languages I know the basics of are c++, HTML, and Java Script.</p>
+<p>Below is a list of some of my hobbies.</p>
+
+<ul>
+    <li>- Cars</li>
+    <li>- Street Racing</li>
+    <li>- Programming</li>
+    <li>- Entrepreneurship</li>
+</ul>
 
 </body>
 </html>
