--- a/index.html
+++ b/index.html
@@ -12,11 +12,13 @@
 <p>Below is a list of some of my hobbies.</p>
 
 <ul>
-    <li>- Cars</li>
-    <li>- Street Racing</li>
-    <li>- Programming</li>
-    <li>- Entrepreneurship</li>
+    <li>Cars</li>
+    <li>Street Racing</li>
+    <li>Programming</li>
+    <li>Entrepreneurship</li>
 </ul>
+
+<p><a href="https://www.linkedin.com/in/joshvelez1/">My Linkedin Profile</a></p>
 
 </body>
 </html>
