--- a/index.html
+++ b/index.html
@@ -20,5 +20,9 @@
 
 <p><a href="https://www.linkedin.com/in/joshvelez1/">My Linkedin Profile</a></p>
 
+<img src="https://tinyurl.com/2ruxk2tk" alt="My Car">
+
+<hr>
+<p>February 26 2026 - Joshua Velez</p>
 </body>
 </html>
