--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <p><a href="https://www.linkedin.com/in/joshvelez1/">My Linkedin Profile</a></p>
 
-<img src="https://tinyurl.com/2ruxk2tk" alt="My Car">
+<img src="https://hips.hearstapps.com/hmg-prod/images/img-5784-1657034981.jpg?resize=640:*" alt="My Car">
 
 <hr>
 <p>February 26 2026 - Joshua Velez</p>
